# ray-rag-intelligence

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  RUNBOOK.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/corpus/: chunking.md  embeddings.md  fine_tuning.md  grounding.md  hybrid_search.md  rag_overview.md  ray_clusters.md  ray_core.md  ray_data.md  ray_fault_tolerance.md  ray_observability.md  ray_serve.md  ray_train.md  ray_tune.md  reranking.md  vector_search.md
data/eval/: relevance.jsonl  relevance_test.jsonl  relevance_train.jsonl
data/intents/: intents.jsonl
deploy/: anyscale.md  vllm.md
scripts/: measure_latency.py  measure_throughput.py
src/ray_rag/: __init__.py  config.py  observability.py
src/ray_rag/data/: __init__.py  chunk.py  embed.py  index.py
src/ray_rag/eval/: __init__.py  grounding.py  harness.py  metrics.py
src/ray_rag/models/: __init__.py  features.py  intent.py  reranker.py  train.py
src/ray_rag/serve/: __init__.py  app.py  deployments.py  generate.py
tests/: test_chunk.py  test_config.py  test_embed.py  test_eval_data.py  test_features.py  test_generate.py  test_grounding.py  test_grounding_eval.py  test_harness.py  test_index.py  test_intent.py  test_metrics.py  test_observability.py  test_report.py  test_reranker.py  test_serve_guardrail.py
