[project]
name = "ray-rag-intelligence"
version = "0.1.0"
description = "Distributed RAG document-intelligence platform on Ray: trained ML owns retrieval ranking and routing; the LLM only does citation-grounded generation."
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = { text = "MIT" }
authors = [{ name = "Pralay Ghosh" }]

dependencies = [
    "ray[data,train,tune,serve]>=2.30,<2.40",
    "sentence-transformers>=3.0",
    "faiss-cpu>=1.8",
    "torch>=2.2",
    "transformers>=4.42",
    "scikit-learn>=1.4",
    "anthropic>=0.40",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "fastapi>=0.111",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
    "mypy>=1.10",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
